...
    }
    
    func handleFiltersNotifications(type : String) {
        
        self.appendSelectedFilters()
        //print("selectedfilterArray==========================\(selectedfilterArray)")
        if type == "Apply" {
            NotificationCenter.default.post(name: Notification.Name("updatefilters"), object: nil, userInfo: ["filters":selectedfilterArray])
        } else if type == "Save" {
            NotificationCenter.default.post(name: Notification.Name("savedFilters"), object: nil, userInfo: ["filters":selectedfilterArray])
        }
        self.dismiss(animated: false, completion: nil)
    }
...
